// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content acceptsInterface 1`] = `
[
  {
    "field": "content",
    "name": "Content",
    "ref": "cosmos/gov/v1/tx.proto",
    "type": "MsgExecLegacyContent",
  },
  {
    "field": "content",
    "name": "Content",
    "ref": "cosmos/gov/v1/tx.proto",
    "type": "MsgExecLegacyContent",
  },
  {
    "field": "content",
    "name": "Content",
    "ref": "cosmos/gov/v1beta1/gov.proto",
    "type": "Proposal",
  },
  {
    "field": "content",
    "name": "Content",
    "ref": "cosmos/gov/v1beta1/tx.proto",
    "type": "MsgSubmitProposal",
  },
  {
    "field": "content",
    "name": "Content",
    "ref": "cosmos/gov/v1beta1/tx.proto",
    "type": "MsgSubmitProposal",
  },
]
`;

exports[`Content implementsInterface 1`] = `
[
  {
    "name": "Content",
    "ref": "cosmos/gov/v1beta1/gov.proto",
    "type": "TextProposal",
  },
]
`;

exports[`FeeAllowanceI acceptsInterface 1`] = `
[
  {
    "field": "allowance",
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/feegrant.proto",
    "type": "AllowedMsgAllowance",
  },
  {
    "field": "allowance",
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/feegrant.proto",
    "type": "Grant",
  },
  {
    "field": "allowance",
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/tx.proto",
    "type": "MsgGrantAllowance",
  },
  {
    "field": "allowance",
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/tx.proto",
    "type": "MsgGrantAllowance",
  },
]
`;

exports[`FeeAllowanceI implementsInterface 1`] = `
[
  {
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/feegrant.proto",
    "type": "BasicAllowance",
  },
  {
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/feegrant.proto",
    "type": "PeriodicAllowance",
  },
  {
    "name": "FeeAllowanceI",
    "ref": "cosmos/feegrant/v1beta1/feegrant.proto",
    "type": "AllowedMsgAllowance",
  },
]
`;

exports[`PoolI acceptsInterface 1`] = `
[
  {
    "field": "pools",
    "name": "PoolI",
    "ref": "osmosis/gamm/v1beta1/genesis.proto",
    "type": "GenesisState",
  },
  {
    "field": "pool",
    "name": "PoolI",
    "ref": "osmosis/gamm/v1beta1/query.proto",
    "type": "QueryPoolResponse",
  },
  {
    "field": "pools",
    "name": "PoolI",
    "ref": "osmosis/gamm/v1beta1/query.proto",
    "type": "QueryPoolsResponse",
  },
]
`;

exports[`PoolI implementsInterface 1`] = `
[
  {
    "name": "PoolI",
    "ref": "osmosis/gamm/pool-models/balancer/balancerPool.proto",
    "type": "Pool",
  },
  {
    "name": "PoolI",
    "ref": "osmosis/gamm/pool-models/stableswap/stableswap_pool.proto",
    "type": "Pool",
  },
]
`;
